# Gakushu001_Bare

./: .gitignore  CMakeLists.txt  main.cpp  pico2.repl  pico2.resc
driver/sht31/: SHT31.cpp  SHT31.h
interface/: I2CInterface.h  PicoI2C.h  SensorBase_Temp.h
test/: CMakeLists.txt  MockI2C.h  test_main.cpp  test_tempSensor.cpp
